fix: add gap above searchj results

--- a/frontend/src/components/organisms/Results/Results.scss
+++ b/frontend/src/components/organisms/Results/Results.scss
@@ -1,4 +1,5 @@
 .Results {
+    margin-top: 1em;
     display: flex;
     flex-direction: column;
     gap: 1em;
